--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -6,3 +6,7 @@ license = "Apache-2.0"
 
 [dependencies]
 thiserror = { workspace = true }
+gem = { path = "../gem" }
+pbm = { path = "../pbm" }
+tam = { path = "../tam" }
+ucf-protocol = { workspace = true }
