Add protocol-typed execution and signal frame aggregation

--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -10,3 +10,5 @@ gem = { path = "../gem" }
 pbm = { path = "../pbm" }
 tam = { path = "../tam" }
 ucf-protocol = { workspace = true }
+frames = { path = "../frames" }
+hex = "0.4"
