--- a/crates/frames/Cargo.toml
+++ b/crates/frames/Cargo.toml
@@ -6,3 +6,6 @@ license = "Apache-2.0"
 
 [dependencies]
 thiserror = { workspace = true }
+blake3 = { workspace = true }
+ucf-protocol = { workspace = true }
+pbm = { path = "../pbm" }
