--- a/crates/gem/Cargo.toml
+++ b/crates/gem/Cargo.toml
@@ -10,3 +10,4 @@ blake3 = { workspace = true }
 pbm = { path = "../pbm" }
 tam = { path = "../tam" }
 ucf-protocol = { workspace = true }
+frames = { path = "../frames" }
