--- a/crates/tam/Cargo.toml
+++ b/crates/tam/Cargo.toml
@@ -6,3 +6,5 @@ license = "Apache-2.0"
 
 [dependencies]
 thiserror = { workspace = true }
+blake3 = { workspace = true }
+ucf-protocol = { workspace = true }
