--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -11,4 +11,5 @@ pbm = { path = "../pbm" }
 tam = { path = "../tam" }
 ucf-protocol = { workspace = true }
 frames = { path = "../frames" }
+control = { path = "../control" }
 hex = "0.4"
