Implement PVGS receipt verification and enforcement

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "crates/tam",
     "crates/frames",
     "crates/pvgs_client",
+    "crates/pvgs_verify",
     "crates/app",
     "crates/ucf-protocol",
 ]
