--- a/crates/pvgs_verify/Cargo.toml
+++ b/crates/pvgs_verify/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 thiserror = { workspace = true }
 ucf-protocol = { workspace = true }
 ed25519-dalek = "2"
+blake3 = { workspace = true }
 
 [dev-dependencies]
 rand = "0.8"
