--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -14,3 +14,5 @@ frames = { path = "../frames" }
 control = { path = "../control" }
 hex = "0.4"
 pvgs_verify = { path = "../pvgs_verify" }
+pvgs_client = { path = "../pvgs_client" }
+ed25519-dalek = "2"
