--- a/crates/frames/Cargo.toml
+++ b/crates/frames/Cargo.toml
@@ -9,3 +9,8 @@ thiserror = { workspace = true }
 blake3 = { workspace = true }
 ucf-protocol = { workspace = true }
 pbm = { path = "../pbm" }
+serde = { version = "1", features = ["derive"] }
+serde_yaml = "0.9"
+
+[dev-dependencies]
+tempfile = "3"
