--- a/crates/tom/Cargo.toml
+++ b/crates/tom/Cargo.toml
@@ -6,3 +6,6 @@ license = "Apache-2.0"
 
 [dependencies]
 thiserror = { workspace = true }
+pvgs_client = { path = "../pvgs_client" }
+trm = { path = "../trm" }
+ucf-protocol = { workspace = true }
