Add query decision map for replay protection

--- a/crates/gem/Cargo.toml
+++ b/crates/gem/Cargo.toml
@@ -15,6 +15,7 @@ control = { path = "../control" }
 pvgs_verify = { path = "../pvgs_verify" }
 pvgs_client = { path = "../pvgs_client" }
 trm = { path = "../trm" }
+hex = "0.4"
 
 [dev-dependencies]
 ed25519-dalek = "2"
