Add micro milestone planner and PVGS support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
     "crates/app",
     "crates/ucf-protocol",
     "crates/test-utils",
+    "crates/ckm_client",
 ]
 resolver = "2"
 
