Add CKM orchestrator and commit orchestration hooks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "crates/tom",
     "crates/tam",
     "crates/frames",
+    "crates/ckm_orchestrator",
     "crates/pvgs_client",
     "crates/pvgs_verify",
     "crates/app",
