--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -17,6 +17,7 @@ pvgs_verify = { path = "../pvgs_verify" }
 pvgs_client = { path = "../pvgs_client" }
 ed25519-dalek = "2"
 trm = { path = "../trm" }
+ckm_orchestrator = { path = "../ckm_orchestrator" }
 
 [dev-dependencies]
 chip4-pvgs = { path = "../../tests/chip4-pvgs" }
