--- a/crates/cdm/Cargo.toml
+++ b/crates/cdm/Cargo.toml
@@ -7,3 +7,6 @@ license = "Apache-2.0"
 [dependencies]
 thiserror = { workspace = true }
 ucf-protocol = { workspace = true }
+blake3 = { workspace = true }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
