--- a/crates/frames/Cargo.toml
+++ b/crates/frames/Cargo.toml
@@ -9,8 +9,11 @@ thiserror = { workspace = true }
 blake3 = { workspace = true }
 ucf-protocol = { workspace = true }
 pbm = { path = "../pbm" }
+cdm = { path = "../cdm" }
+chip2_client = { path = "../chip2_client" }
 serde = { version = "1", features = ["derive"] }
 serde_yaml = "0.9"
 
 [dev-dependencies]
 tempfile = "3"
+serde_json = "1"
