Add suspension crate for action suspension recommendations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ members = [
     "crates/test-utils",
     "crates/ckm_client",
     "crates/replay_orchestrator",
-    "crates/geist_stub",
+    "crates/geist_stub", "crates/suspension",
 ]
 resolver = "2"
 
