Record suspension events in window frames

--- a/crates/suspension/Cargo.toml
+++ b/crates/suspension/Cargo.toml
@@ -7,3 +7,6 @@ rust-version.workspace = true
 
 [dependencies]
 ucf-protocol = { workspace = true }
+
+[dev-dependencies]
+frames = { path = "../frames" }
