--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ members = [
     "crates/replay_orchestrator",
     "crates/geist_stub", "crates/suspension",
     "crates/scheduler",
+    "tests",
 ]
 resolver = "2"
 
