--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 [dev-dependencies]
 ckm_orchestrator = { path = "../crates/ckm_orchestrator" }
 control = { path = "../crates/control" }
+ed25519-dalek = "2"
 frames = { path = "../crates/frames" }
 gem = { path = "../crates/gem" }
 pbm = { path = "../crates/pbm" }
