--- a/crates/pvgs_client/Cargo.toml
+++ b/crates/pvgs_client/Cargo.toml
@@ -13,6 +13,7 @@ ucf-protocol = { workspace = true }
 pvgs_verify = { path = "../pvgs_verify" }
 chip4-pvgs = { path = "../../tests/chip4-pvgs", optional = true }
 hex = "0.4"
+rpp_checker = { path = "../rpp_checker" }
 
 [dev-dependencies]
 ed25519-dalek = "2"
