--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,9 @@ rust-version = "1.76"
 [workspace.dependencies]
 thiserror = "1"
 blake3 = "1"
+hex = "0.4"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 ucf-protocol = { path = "crates/ucf-protocol" }
 control = { path = "crates/control" }
 
