--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,8 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 ucf-protocol = { path = "crates/ucf-protocol" }
 control = { path = "crates/control" }
+candle-core = "0.4"
+candle-nn = "0.4"
 
 [profile.release]
 opt-level = 3
