--- a/experimental/lnss/crates/lnss_hooks/Cargo.toml
+++ b/experimental/lnss/crates/lnss_hooks/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 license = "Apache-2.0"
 publish = false
 
+[features]
+default = []
+lnss-candle = []
+
 [dependencies]
 lnss_core = { path = "../lnss_core" }
 serde = { workspace = true }
