--- a/experimental/lnss/crates/lnss_runtime/Cargo.toml
+++ b/experimental/lnss/crates/lnss_runtime/Cargo.toml
@@ -16,8 +16,8 @@ lnss_hooks = { path = "../lnss_hooks" }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
-candle-core = { workspace = true, optional = true }
-candle-nn = { workspace = true, optional = true }
+candle-core = { version = "0.4", optional = true }
+candle-nn = { version = "0.4", optional = true }
 
 [dev-dependencies]
 lnss_hooks = { path = "../lnss_hooks" }
