--- a/experimental/lnss/Cargo.toml
+++ b/experimental/lnss/Cargo.toml
@@ -51,7 +51,7 @@ lnss_mechint = { path = "crates/lnss_mechint", optional = true }
 lnss_rig = { path = "crates/lnss_rig", optional = true }
 lnss_bluebridge = { path = "crates/lnss_bluebridge", optional = true }
 lnss_evolve = { path = "crates/lnss_evolve", optional = true }
-burn = { workspace = true, optional = true }
+burn = { version = "0.12", default-features = false, optional = true }
 
 [workspace.dependencies]
 blake3 = "1"
@@ -59,4 +59,3 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "1"
 hex = "0.4"
-burn = { version = "0.12", default-features = false }
