--- a/experimental/lnss/crates/lnss_runtime/Cargo.toml
+++ b/experimental/lnss/crates/lnss_runtime/Cargo.toml
@@ -17,7 +17,7 @@ lnss_hooks = { path = "../lnss_hooks" }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
-burn = { workspace = true, optional = true }
+burn = { version = "0.12", default-features = false, optional = true }
 
 [dev-dependencies]
 lnss_hooks = { path = "../lnss_hooks" }
