Fix lnss burn feature formatting

--- a/experimental/lnss/Cargo.toml
+++ b/experimental/lnss/Cargo.toml
@@ -35,7 +35,7 @@ lnss-candle = [
     "lnss_hooks/lnss-candle",
     "lnss_sae/lnss-candle",
 ]
-lnss-burn = ["lnss_runtime/lnss-burn", "burn"]
+lnss-burn = ["lnss_runtime/lnss-burn"]
 lnss-liquid-ode = ["lnss-burn", "lnss_runtime/lnss-liquid-ode"]
 lnss-arrow = ["lnss_mechint/lnss-arrow"]
 lnss-pyo3 = ["lnss_bluebridge/lnss-pyo3"]
@@ -51,7 +51,6 @@ lnss_mechint = { path = "crates/lnss_mechint", optional = true }
 lnss_rig = { path = "crates/lnss_rig", optional = true }
 lnss_bluebridge = { path = "crates/lnss_bluebridge", optional = true }
 lnss_evolve = { path = "crates/lnss_evolve", optional = true }
-burn = { version = "0.12", default-features = false, optional = true }
 
 [workspace.dependencies]
 blake3 = "1"
