--- a/experimental/lnss/crates/lnss_runtime/Cargo.toml
+++ b/experimental/lnss/crates/lnss_runtime/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 
 [features]
 default = []
-lnss-burn = ["burn"]
+lnss-burn = ["burn", "bincode"]
 lnss-candle = []
 lnss-liquid-ode = ["lnss-burn"]
 
@@ -18,6 +18,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 burn = { version = "0.12", default-features = false, optional = true }
+bincode = { version = "=2.0.0-rc.3", features = ["serde"], optional = true }
 
 [dev-dependencies]
 lnss_hooks = { path = "../lnss_hooks" }
