Add Chip2 inject rig client and tests

--- a/experimental/lnss/crates/lnss_bluebridge/Cargo.toml
+++ b/experimental/lnss/crates/lnss_bluebridge/Cargo.toml
@@ -12,3 +12,6 @@ lnss-cxx = []
 
 [dependencies]
 lnss_runtime = { path = "../lnss_runtime" }
+
+[dev-dependencies]
+lnss_core = { path = "../lnss_core" }
