--- a/experimental/lnss/crates/lnss_bluebridge/Cargo.toml
+++ b/experimental/lnss/crates/lnss_bluebridge/Cargo.toml
@@ -7,11 +7,14 @@ publish = false
 
 [features]
 default = []
+lnss = []
 lnss-pyo3 = []
 lnss-cxx = []
+lnss-chip2-bridge = []
 
 [dependencies]
 lnss_runtime = { path = "../lnss_runtime" }
 
 [dev-dependencies]
+chip2 = { path = "../chip2" }
 lnss_core = { path = "../lnss_core" }
