--- a/experimental/lnss/crates/lnss_evolve/Cargo.toml
+++ b/experimental/lnss/crates/lnss_evolve/Cargo.toml
@@ -6,5 +6,9 @@ license = "Apache-2.0"
 publish = false
 
 [dependencies]
-serde = { workspace = true }
+blake3 = { workspace = true }
 hex = { workspace = true }
+lnss_core = { path = "../lnss_core" }
+serde = { workspace = true }
+serde_json = { workspace = true }
+thiserror = { workspace = true }
