Fix lnss runtime pvgs_client path

--- a/experimental/lnss/crates/lnss_runtime/Cargo.toml
+++ b/experimental/lnss/crates/lnss_runtime/Cargo.toml
@@ -15,8 +15,8 @@ lnss-liquid-ode = ["lnss-burn"]
 lnss_core = { path = "../lnss_core" }
 lnss_evolve = { path = "../lnss_evolve" }
 lnss_hooks = { path = "../lnss_hooks" }
-pvgs_client = { path = "../../../crates/pvgs_client" }
-ucf-protocol = { path = "../../../crates/ucf-protocol" }
+pvgs_client = { path = "../../../../crates/pvgs_client" }
+ucf-protocol = { path = "../../../../crates/ucf-protocol" }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
