--- a/experimental/lnss/crates/lnss_runtime/Cargo.toml
+++ b/experimental/lnss/crates/lnss_runtime/Cargo.toml
@@ -13,6 +13,7 @@ lnss-liquid-ode = ["lnss-burn"]
 
 [dependencies]
 lnss_core = { path = "../lnss_core" }
+lnss_approval = { path = "../lnss_approval" }
 lnss_evolve = { path = "../lnss_evolve" }
 lnss_hooks = { path = "../lnss_hooks" }
 pvgs_client = { path = "../../../../crates/pvgs_client" }
@@ -20,6 +21,7 @@ ucf-protocol = { path = "../../../../crates/ucf-protocol" }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
+hex = { workspace = true }
 burn = { version = "0.12", default-features = false, optional = true }
 bincode = { version = "=2.0.0-rc.3", features = ["serde"], optional = true }
 
