Add approval decision activation flow

--- a/experimental/lnss/crates/lnss_approval/Cargo.toml
+++ b/experimental/lnss/crates/lnss_approval/Cargo.toml
@@ -10,6 +10,8 @@ lnss_core = { path = "../lnss_core" }
 lnss_evolve = { path = "../lnss_evolve" }
 ucf-protocol = { path = "../../../../crates/ucf-protocol" }
 hex = { workspace = true }
+prost = "0.12"
+thiserror = { workspace = true }
 
 [dev-dependencies]
 serde_json = { workspace = true }
