--- a/experimental/lnss/crates/lnss_runtime/Cargo.toml
+++ b/experimental/lnss/crates/lnss_runtime/Cargo.toml
@@ -22,6 +22,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 hex = { workspace = true }
+prost = "0.12"
 burn = { version = "0.12", default-features = false, optional = true }
 bincode = { version = "=2.0.0-rc.3", features = ["serde"], optional = true }
 
