--- a/crates/pvgs_client/Cargo.toml
+++ b/crates/pvgs_client/Cargo.toml
@@ -14,6 +14,7 @@ pvgs_verify = { path = "../pvgs_verify" }
 chip4-pvgs = { path = "../../tests/chip4-pvgs", optional = true }
 hex = "0.4"
 rpp_checker = { path = "../rpp_checker" }
+prost = "0.12"
 
 [dev-dependencies]
 ed25519-dalek = "2"
