--- a/experimental/lnss/crates/lnss_runtime/Cargo.toml
+++ b/experimental/lnss/crates/lnss_runtime/Cargo.toml
@@ -13,6 +13,8 @@ lnss-liquid-ode = ["lnss-burn"]
 
 [dependencies]
 lnss_core = { path = "../lnss_core" }
+lnss_worldmodel = { path = "../lnss_worldmodel" }
+lnss_rlm = { path = "../lnss_rlm" }
 lnss_approval = { path = "../lnss_approval" }
 lnss_evolve = { path = "../lnss_evolve" }
 lnss_hooks = { path = "../lnss_hooks" }
