--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -26,6 +26,8 @@ lnss_hooks = { path = "../../experimental/lnss/crates/lnss_hooks", optional = tr
 lnss_mechint = { path = "../../experimental/lnss/crates/lnss_mechint", optional = true }
 lnss_rig = { path = "../../experimental/lnss/crates/lnss_rig", optional = true }
 lnss_core = { path = "../../experimental/lnss/crates/lnss_core", optional = true }
+lnss_rlm = { path = "../../experimental/lnss/crates/lnss_rlm", optional = true }
+lnss_worldmodel = { path = "../../experimental/lnss/crates/lnss_worldmodel", optional = true }
 serde = { version = "1", features = ["derive"], optional = true }
 serde_json = { version = "1", optional = true }
 
@@ -43,6 +45,8 @@ lnss = [
     "lnss_mechint",
     "lnss_rig",
     "lnss_core",
+    "lnss_rlm",
+    "lnss_worldmodel",
     "serde",
     "serde_json",
 ]
