--- a/experimental/lnss/Cargo.toml
+++ b/experimental/lnss/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "crates/lnss_worldmodulation",
     "crates/lnss_worldmodel",
     "crates/lnss_rlm",
+    "crates/lnss_triggers",
     "crates/lnss_runtime",
     "crates/lnss_hooks",
     "crates/lnss_sae",
@@ -32,6 +33,7 @@ lnss = [
     "lnss_worldmodulation",
     "lnss_worldmodel",
     "lnss_rlm",
+    "lnss_triggers",
     "lnss_runtime",
     "lnss_hooks",
     "lnss_sae",
@@ -61,6 +63,7 @@ lnss_lifecycle = { path = "crates/lnss_lifecycle", optional = true }
 lnss_worldmodulation = { path = "crates/lnss_worldmodulation", optional = true }
 lnss_worldmodel = { path = "crates/lnss_worldmodel", optional = true }
 lnss_rlm = { path = "crates/lnss_rlm", optional = true }
+lnss_triggers = { path = "crates/lnss_triggers", optional = true }
 lnss_runtime = { path = "crates/lnss_runtime", optional = true }
 lnss_hooks = { path = "crates/lnss_hooks", optional = true }
 lnss_sae = { path = "crates/lnss_sae", optional = true }
